feat: implement first day/night mode

--- a/apps/template/src/app/canvas/header/header.module.scss
+++ b/apps/template/src/app/canvas/header/header.module.scss
@@ -1,12 +1,12 @@
-.img {
-    background-color: black;
-    --webkit-mask-size: contain;
-    width: 22px;
-    height: 22px;
-}
-
-.img {
-    &.email {
-        --webkit-mask-image: url('../../../assets/icons/mail.png');
+.header {
+    :global {   
+        .img {
+            width: 22px;
+            height: 22px;
+        }
+        
+        .right .img {
+            margin-left: 7px;
+        }
     }
 }
