--- a/apps/template/src/styles.scss
+++ b/apps/template/src/styles.scss
@@ -17,6 +17,10 @@
     --ambient-alt: #006ac582;
     --foreground: black;
     --background: #faffff;
+    &.night {
+        --foreground: white;
+        --background: black;
+    }
 }
 
 html {
@@ -27,6 +31,8 @@ html {
     margin: 0;
     padding: 0;
     font-family: "Quicksand";
+    color: var(--foreground);
+    transition: color 300ms;
 }
 
 
@@ -72,7 +78,8 @@ h3 {
 }
 
 body {
-    background: white;
+    background-color: var(--background);
+    transition: background-color 300ms;
 }
 
 img {
@@ -99,7 +106,7 @@ header {
     padding-bottom: 15px;
     margin-bottom: 15px;
     border-bottom: 1px solid var(--ambient-alt);
-    box-shadow: 0px 4px 5px -6px black;
+    box-shadow: 0px 4px 5px -6px var(--foreground);
 }
 
 header >div {
@@ -219,10 +226,6 @@ h1 + .work-place-wrapper {
 }
 .references .number, main a {
     opacity: 0.65;
-    color: black;
-}
-
-a {
     color: black;
 }
 
@@ -450,17 +453,4 @@ main .interests img {
 
 .rest >div {
     flex-basis: 50%;
-}
-
-.img {
-    background-color: black;
-    --webkit-mask-size: contain;
-    width: 22px;
-    height: 22px;
-}
-
-.img {
-    &.email {
-        --webkit-mask-image: url('assets/icons/mail.png');
-    }
 }
