feat: add nightmode functionality in custom hook and provide state from outside

--- a/apps/template/src/styles.scss
+++ b/apps/template/src/styles.scss
@@ -68,7 +68,7 @@ h3 {
     font-size: 14pt;
 }
 
-.canvasContainer {
+.resumeCanvas {
     background-color: var(--background);
     transition: background-color 300ms;
     a:link, a:visited {
